[gd_scene load_steps=4 format=3 uid="uid://c8nuwrjr6in87"]

[ext_resource type="Script" uid="uid://djq7yn4je1cgp" path="res://Scenes/Weapon/RangedWeapon.gd" id="1_futy1"]
[ext_resource type="PackedScene" uid="uid://db0soby7y3qg8" path="res://Scenes/Weapon/_RANGED/Projectile/Arrow.tscn" id="2_pl2ip"]
[ext_resource type="PackedScene" uid="uid://da6tp83t1rm12" path="res://Scenes/Weapon/_RANGED/Mage_Staff.glb" id="3_futy1"]

[node name="Mage Staff" type="Node3D"]
script = ExtResource("1_futy1")
projectile_prefab = ExtResource("2_pl2ip")
aim_speed = 10.0

[node name="ProjectileContainer" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Mage_Staff" parent="." instance=ExtResource("3_futy1")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
